[package]
name = "typprice-rs"
version = "0.1.0"
authors = ["immortal infidel <immortal.infidel@gmail.com>"]
edition = "2018"
license="MIT"
description="Typical Price (typprice) Implementation In Rust"
repository="https://github.com/immortalinfidel/typprice-rs"
homepage="https://github.com/immortalinfidel/typprice-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ta-common = { version = "0.1.0" }
